[project]
name = "pwt.utils"
version = "0.1.0"
requires-python = ">= 3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.0.0",
    "requests",
    "numpy",
    "pydantic",
    "rule_engine",
]
http = ["requests"]
ndarray_audio_utils = ["numpy"]
expression = ["rule_engine"]
pydantic_utils = ["pydantic", "rule_engine"]
log_filter = ["rule_engine"]
log_config = ["pydantic", "rule_engine"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
