[project]
name = "pwt-utils"
version = "0.1.1"
requires-python = ">= 3.10"
readme = "README.md"
license = { file = "LICENSE" }
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=1.0.0",
    "numpy",
    "pydantic",
    "rule_engine",
]
ndarray-audio-utils = ["numpy"]
expression = ["rule_engine"]
pydantic-utils = ["pydantic", "rule_engine"]
log-filter = ["rule_engine"]
log-config = ["pydantic", "rule_engine"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
asyncio_mode = "auto"
pythonpath = ["src"]
testpaths = ["tests"]
